<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/rounded_view"
    android:orientation="vertical"
    android:padding="4dip" >

    <!-- add progress -->

    <LinearLayout
        android:id="@+id/add_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/addingRide"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- add form -->

    <ScrollView
        android:id="@+id/addForm"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal|left"
            android:orientation="vertical"
            android:padding="4dip" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="0.07"
                android:text="@string/newRide"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/darker_gray" />

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left" >

                <requestFocus />

                <RadioButton
                    android:id="@+id/radioIstart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/Istart" />

                <RadioButton
                    android:id="@+id/radioIneed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Ineed" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="0.07"
                android:text="@string/where"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="14dip"
                android:paddingRight="14dip"
                android:paddingTop="8dip" >

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="0dip"
                    android:layout_height="38dp"
                    android:layout_weight="0.07"
                    android:text="@string/from"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/fromField"
                    android:layout_width="181dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="#2C3539" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="14dip"
                android:paddingRight="14dip"
                android:paddingTop="4dip" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dip"
                    android:layout_height="38dp"
                    android:layout_weight="0.12"
                    android:text="@string/to"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/toField"
                    android:layout_width="181dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="#2C3539" >
                </EditText>
            </LinearLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="0.07"
                android:text="@string/when"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/timeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text=""
                    android:textColor="#ffffff"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/dateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dip"
                    android:background="@android:color/transparent"
                    android:text=""
                    android:textColor="#ffffff"
                    android:textSize="25sp" />
            </LinearLayout>

            <Button
                android:id="@+id/groupsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6dip"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:layout_marginTop="6dip"
                android:paddingBottom="10dip"
                android:paddingTop="10dip"
                android:text="@string/groups" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="0.07"
                android:text="@string/comments"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/darker_gray"
                android:paddingTop="5dip" />

            <EditText
                android:id="@+id/rideDetails"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_margin="6dip"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="6dip"
                android:layout_weight="6.76"
                android:background="@layout/rounded_comments"
                android:ems="10"
                android:inputType="textMultiLine"
                android:lines="3"
                android:minLines="2"
                android:padding="6dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:textColor="#2C3539"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="0.07"
                android:text="@string/myDetails"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/darker_gray"
                android:paddingTop="5dip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:orientation="horizontal"
                android:paddingLeft="14dip"
                android:paddingRight="14dip" >

                <CheckBox
                    android:id="@+id/publishMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.07"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/emailAddress"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.02"
                    android:ems="10"
                    android:inputType="textEmailAddress" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:orientation="horizontal"
                android:paddingLeft="14dip"
                android:paddingRight="14dip" >

                <CheckBox
                    android:id="@+id/publishPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.07"
                    android:text="@string/phone"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.02"
                    android:ems="10"
                    android:inputType="phone" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:orientation="horizontal"
                android:paddingLeft="14dip"
                android:paddingRight="14dip" >

                <CheckBox
                    android:id="@+id/publishSMS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.07"
                    android:text="@string/sms"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dip" >

                <Button
                    android:id="@+id/publishButton"
                    android:layout_width="170dip"
                    android:layout_height="170dip"
                    android:background="@drawable/publish_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>