<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background_style"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/inner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@layout/rounded_view"
        android:orientation="vertical"
        android:padding="4dip" >

        <LinearLayout
            android:id="@+id/delete_layer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" 
            android:visibility="gone">
            <Button
                android:id="@+id/delete_button"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_action_delete"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/page_icon"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/car_reg" />

            <TextView
                android:id="@+id/page_kind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dip"
                android:background="@android:color/transparent"
                android:text="@string/ride"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>
        </LinearLayout>
		<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="6dip"
            android:paddingTop="6dip" >

            <ImageView
                android:id="@+id/publisherImageRideView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dip"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/publisherNameRideView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textColor="#ffffff"
                    android:layout_marginTop="4dip"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/groupNameRideView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="4dip"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="6dip"
            android:paddingTop="6dip" >

            <TextView
                android:id="@+id/alwaysFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/lightGray" />

            <TextView
                android:id="@+id/from_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="6dip"
            android:paddingTop="6dip" >

            <TextView
                android:id="@+id/alwaysTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/lightGray" />

            <TextView
                android:id="@+id/to_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/time_of_ride"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/date_of_ride"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:background="@android:color/transparent"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>

       

        

        <TextView
            android:id="@+id/rideDetails"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginBottom="6dip"
            android:layout_marginTop="6dip"
            android:layout_weight="6.76"
            android:background="@layout/rounded_comments"
            android:ems="10"
            android:lines="3"
            android:minLines="2"
            android:padding="6dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_margin="6dip"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textColor="#2C3539"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:paddingTop="6dip" >

            <Button
                android:id="@+id/call_button"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_action_call"
                android:gravity="center" />

            <Button
                android:id="@+id/mail_button"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_action_mail"
                android:gravity="center" />

            <Button
                android:id="@+id/sms_button"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/sms3"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>